@@ -38,6 +38,7 @@ WriteMakefile(
         'RPi::DigiPot::MCP4XXXX'    => 2.3603,
         'RPi::DHT11'                => 1.02,
         'RPi::LCD'                  => 2.3601,
+        'RPi::Pin'                  => 2.3601,
         'RPi::SPI'                  => 2.3606,
         'RPi::WiringPi::Constant'   => 0.02,
         'WiringPi::API'             => 2.3609,
